--- a/Resume_Project2_Sejal/index.html
+++ b/Resume_Project2_Sejal/index.html
@@ -60,8 +60,10 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     resume below. You can pretty easily figure out what each section will
     display by looking at the id or at what's written between the <h2> tags.
     -->
-    <div id="header" class="center-content clear-fix">
+    <div id="download" class="clear-fix right-side"> </div>
+    <div id="header" class="">
       <ul id="topContacts" class="flex-box"></ul>
+    </div>
     </div>
     <div style="clear: both;"></div>
     <div id="workExperience" class="gray">
