--- a/Sejal_Portfolio/Portfolio site_updated.html
+++ b/Sejal_Portfolio/Portfolio site_updated.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet" >
+<title>Sejal's Portfolio</title>
 </head>
   <body>
   
@@ -17,11 +18,11 @@
       <header>
         <div class="row">
           <div class="col-md-6">
-            <img class="title-logo" src="img/logo.jpg" class="img-responsive" alt="Udacity Logo">
+            <img class="title-logo" src="img/logo.png" class="img-responsive" alt="Logo">
           </div>
           <div class="col-md-6 text-uppercase text-right">
             <h1 class="title-super text-thin">Sejal Shah</h1>
-            <h3>Front-end Ninja</h3>
+            <h3>Front-end Developer</h3>
           </div>
         </div>
         <div class="row"> 
@@ -34,7 +35,8 @@
       <!-- Main image -->
 
       <div class="row">
-        <img src="http://placekitten.com/g/1140/350" class="img-responsive" alt="Puppy image">
+        <!-- <img src="http://placekitten.com/g/1140/350" class="img-responsive" alt="Puppy image"> -->
+        <img src="img/html.jpg" class="img-responsive" alt="HTML image" id="main">
       </div>
       <div class="row">
         <h2 class="text-muted">Featured Work</h2>
@@ -44,19 +46,19 @@
 
       <article class="row text-center">
         <section class="col-md-4">
-              <img class="size img-responsive" src="img/project1.jpg" data-toggle="modal" data-target="#project1" alt="Appify Image" srcset="img/project1.jpg 1x, img/project1_large.jpg 2x">
-              <h3>Appify</h3>
-              <p><a href="http://github.com/">Link to project</a></p>
+              <img class="size img-responsive" src="img/p1.jpg" data-toggle="modal" data-target="#project1" alt="Project Portfolio" srcset="img/p1.jpg 1x, img/p1.jpg 2x">
+              <h3>Portfolio Site</h3>
+              <p><a href="#"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Projects/tree/master/Sejal_Portfolio">GitHub</a></p>
         </section>
         <section class="col-md-4">
-              <img class="size img-responsive" src="img/project2.jpg" data-toggle="modal" data-target="#project2" alt="Sunflower Image" srcset = "img/project2.jpg 1x, img/project2_large.jpg 2x">
-              <h3>Sunflower</h3>
-              <p><a href="http://github.com/">Link to project</a></p>
+              <img class="size img-responsive" src="img/p2.png" data-toggle="modal" data-target="#project2" alt="Resume Project" srcset = "img/p2.png 1x, img/p2.png 2x">
+              <h3>Web Resume</h3>
+              <p><a target = "_blank" href="https://rawgit.com/sejal6289/Projects/master/Resume_Project2_Sejal/index.html"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Projects/tree/master/Resume_Project2_Sejal">GitHub</a></p>
         </section>
         <section class="col-md-4">
-              <img class="size img-responsive" src="img/project3.jpg" data-toggle="modal" data-target="#project3" alt="Bokeh Image" srcset="img/project3.jpg 1x, img/project3_large.jpg 2x">
-              <h3>Bokeh</h3>
-              <p><a href="http://github.com/">Link to project</a></p>
+              <img class="size img-responsive" src="img/p3.png" data-toggle="modal" data-target="#project3" alt="Classic arcade game clone" srcset="img/project3.jpg 1x, img/p3.png 2x">
+              <h3>Classic Arcade Game Clone</h3>
+              <p><a target = "_blank" href="https://rawgit.com/sejal6289/Project-3---Arcade-game-clone/master/index.html"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Project-3---Arcade-game-clone">GitHub</a></p>
         </section>
       </article> 
 
@@ -75,23 +77,23 @@
           <div class="col-md-6">
             <address>
               <strong>Contact Me</strong><br>
-                1355 Market Street, Suite 900<br>
-                San Francisco, CA 94103<br>
-              <abbr title="Phone">P:</abbr> (123) 456-7890
+                6501, NE Cherry Dr.,<br>
+                Hillsboro, OR 97124<br>
+              <abbr title="Phone">P:</abbr> (971) 777-9701
             </address>
 
             <address>
               <strong>Sejal Shah</strong><br>
-              <a href="mailto:#">Sejal.Shah@abc.com</a>
+              <a href="mailto:#">sejal6289@gmail.com</a>
             </address>
           </div>
 
           <div class="col-md-6" align="right">
             <strong class="connect">Connect with me!</strong><br><br>
-            <a href="https://www.facebook.com/" target="_blank"> <img src="img/fb.jpg" class="img-thumbnail img-responsive icon"> </a>
-            <a href="https://linkedin.com/" target="_blank"> <img src="img/linkedin.png" class="img-thumbnail img-responsive icon icon"> </a>
-            <a href="https://twitter.com/" target="_blank"> <img src="img/twitter.png" class="img-thumbnail img-responsive icon icon"> </a>
-            <a href="https://instagram.com/" target="_blank"> <img src="img/instagram.png" class="img-thumbnail img-responsive icon icon"> </a>
+            <a href="https://www.facebook.com/sejal6289" target="_blank"> <img src="img/fb.jpg" class="img-thumbnail img-responsive icon" alt="FB"> </a>
+            <a href="https://www.linkedin.com/in/sejal6289" target="_blank"> <img src="img/linkedin.png" class="img-thumbnail img-responsive icon icon" alt="linkedin"> </a>
+            <a href="https://github.com/sejal6289" target="_blank"> <img src="img/git.png" class="img-thumbnail img-responsive icon icon" alt="Git"> </a>
+            <a href="https://www.instagram.com/sejal6289/" target="_blank"> <img src="img/instagram.png" class="img-thumbnail img-responsive icon icon" alt="IG"> </a>
           </div>
         </div>
 
@@ -106,11 +108,12 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel1" >Appify</h4>
+            <h4 class="modal-title" id="myModalLabel1" >Portfolio Site</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive" src="img/project1.jpg" alt="Appify Image">
-            This was my first project in this class. I learned a lot about HTML and CSS.
+            <img class="img-responsive" src="img/p1.jpg" alt="Portfolio Image">
+            Thi website is developed to showcase my work and other projects. You can find all important links like GitHub, LinkedIn, Other projects etc.
+            Built using HTML5, CSS and bootstrap framework is a single page responsive website. 
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -123,11 +126,11 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title" id="myModalLabel2">Sunflower</h4>
+              <h4 class="modal-title" id="myModalLabel2">Web Resume</h4>
             </div>
             <div class="modal-body">
-              <img class="img-responsive" src="img/project2.jpg" alt="Sunflower Image">
-              This was my Second project in this class. I learned a lot about HTML and CSS.
+              <img class="img-responsive" src="img/p2.png" alt="Sunflower Image">
+              Developed a Resume website that will give details about my work experience, education qualifications, skills, projects description and locations where I have lived, worked and studied. This responsive website is created using HTML5, CSS and Javascript. 
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -140,11 +143,11 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel3">Bokeh</h4>
+            <h4 class="modal-title" id="myModalLabel3">Classic Arcade Game Clone</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive" src="img/project3.jpg" alt="Bokeh Image">
-            This was my Third project in this class. I learned a lot about HTML and CSS.
+            <img class="img-responsive modal-image" src="img/p3.png" alt="Arcade Game">
+            Developed classic arcade Frogger game clone. This is created using HTML5 canvas and Object Oriented Java Script. 
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
