updated project description

--- a/Sejal_Portfolio/Portfolio site_updated.html
+++ b/Sejal_Portfolio/Portfolio site_updated.html
@@ -129,7 +129,7 @@
               <h4 class="modal-title" id="myModalLabel2">Web Resume</h4>
             </div>
             <div class="modal-body">
-              <img class="img-responsive" src="img/p2.png" alt="Sunflower Image">
+              <img class="img-responsive" src="img/p2.png" alt="Sejal Resume">
               Developed a Resume website that will give details about my work experience, education qualifications, skills, projects description and locations where I have lived, worked and studied. This responsive website is created using HTML5, CSS and Javascript. 
             </div>
             <div class="modal-footer">
