updated project 2 image

--- a/Sejal_Portfolio/Portfolio site_updated.html
+++ b/Sejal_Portfolio/Portfolio site_updated.html
@@ -51,7 +51,7 @@
               <p><a href="#"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Projects/tree/master/Sejal_Portfolio">GitHub</a></p>
         </section>
         <section class="col-md-4">
-              <img class="size img-responsive" src="img/p2.png" data-toggle="modal" data-target="#project2" alt="Resume Project" srcset = "img/p2.png 1x, img/p2.png 2x">
+              <img class="size img-responsive" src="img/p2.jpg" data-toggle="modal" data-target="#project2" alt="Resume Project" srcset = "img/p2.jpg 1x, img/p2.jpg 2x">
               <h3>Web Resume</h3>
               <p><a target = "_blank" href="https://rawgit.com/sejal6289/Projects/master/Resume_Project2_Sejal/index.html"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Projects/tree/master/Resume_Project2_Sejal">GitHub</a></p>
         </section>
@@ -129,7 +129,7 @@
               <h4 class="modal-title" id="myModalLabel2">Web Resume</h4>
             </div>
             <div class="modal-body">
-              <img class="img-responsive" src="img/p2.png" alt="Sejal Resume">
+              <img class="img-responsive" src="img/p2.jpg" alt="Sejal Resume">
               Developed a Resume website that will give details about my work experience, education qualifications, skills, projects description and locations where I have lived, worked and studied. This responsive website is created using HTML5, CSS and Javascript. 
             </div>
             <div class="modal-footer">
