--- a/Sejal_Portfolio/Portfolio site_updated.html
+++ b/Sejal_Portfolio/Portfolio site_updated.html
@@ -56,7 +56,7 @@
               <p><a target = "_blank" href="https://rawgit.com/sejal6289/Projects/master/Resume_Project2_Sejal/index.html"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Projects/tree/master/Resume_Project2_Sejal">GitHub</a></p>
         </section>
         <section class="col-md-4">
-              <img class="size img-responsive" src="img/p3.png" data-toggle="modal" data-target="#project3" alt="Classic arcade game clone" srcset="img/project3.jpg 1x, img/p3.png 2x">
+              <img class="size img-responsive" src="img/p3.jpg" data-toggle="modal" data-target="#project3" alt="Classic arcade game clone" srcset="img/p3.jpg 1x, img/p3.jpg 2x">
               <h3>Classic Arcade Game Clone</h3>
               <p><a target = "_blank" href="https://rawgit.com/sejal6289/Project-3---Arcade-game-clone/master/index.html"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Project-3---Arcade-game-clone">GitHub</a></p>
         </section>
@@ -92,7 +92,7 @@
             <strong class="connect">Connect with me!</strong><br><br>
             <a href="https://www.facebook.com/sejal6289" target="_blank"> <img src="img/fb.jpg" class="img-thumbnail img-responsive icon" alt="FB"> </a>
             <a href="https://www.linkedin.com/in/sejal6289" target="_blank"> <img src="img/linkedin.png" class="img-thumbnail img-responsive icon icon" alt="linkedin"> </a>
-            <a href="https://github.com/sejal6289" target="_blank"> <img src="img/git.png" class="img-thumbnail img-responsive icon icon" alt="Git"> </a>
+            <a href="https://github.com/sejal6289" target="_blank"> <img src="img/git.jpg" class="img-thumbnail img-responsive icon icon" alt="Git"> </a>
             <a href="https://www.instagram.com/sejal6289/" target="_blank"> <img src="img/instagram.png" class="img-thumbnail img-responsive icon icon" alt="IG"> </a>
           </div>
         </div>
@@ -146,7 +146,7 @@
             <h4 class="modal-title" id="myModalLabel3">Classic Arcade Game Clone</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive modal-image" src="img/p3.png" alt="Arcade Game">
+            <img class="img-responsive modal-image" src="img/p3.jpg" alt="Arcade Game">
             Developed classic arcade Frogger game clone. This is created using HTML5 canvas and Object Oriented Java Script. 
           </div>
           <div class="modal-footer">
