--- a/Sejal_Portfolio/Portfolio site_updated.html
+++ b/Sejal_Portfolio/Portfolio site_updated.html
@@ -92,7 +92,7 @@
             <strong class="connect">Connect with me!</strong><br><br>
             <a href="https://www.facebook.com/sejal6289" target="_blank"> <img src="img/fb.jpg" class="img-thumbnail img-responsive icon" alt="FB"> </a>
             <a href="https://www.linkedin.com/in/sejal6289" target="_blank"> <img src="img/linkedin.png" class="img-thumbnail img-responsive icon icon" alt="linkedin"> </a>
-            <a href="https://github.com/sejal6289" target="_blank"> <img src="img/git.jpg" class="img-thumbnail img-responsive icon icon" alt="Git"> </a>
+            <a href="https://github.com/sejal6289" target="_blank"> <img src="img/gitlogo.jpg" class="img-thumbnail img-responsive icon icon" alt="Git"> </a>
             <a href="https://www.instagram.com/sejal6289/" target="_blank"> <img src="img/instagram.png" class="img-thumbnail img-responsive icon icon" alt="IG"> </a>
           </div>
         </div>
