Added 4th project

--- a/Sejal_Portfolio/Portfolio site_updated.html
+++ b/Sejal_Portfolio/Portfolio site_updated.html
@@ -58,10 +58,17 @@
         <section class="col-md-4">
               <img class="size img-responsive" src="img/p3.jpg" data-toggle="modal" data-target="#project3" alt="Classic arcade game clone" srcset="img/p3.jpg 1x, img/p3.jpg 2x">
               <h3>Classic Arcade Game Clone</h3>
-              <p><a target = "_blank" href="https://rawgit.com/sejal6289/Project-3---Arcade-game-clone/master/index.html"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Project-3---Arcade-game-clone">GitHub</a></p>
+              <p><a target = "_blank" href="https://rawgit.com/sejal6289/Project-3---Arcade-game-clone/master/index.html"> Project </a> | <a target = "_blank" href="http://sejal6289.github.io/Project-3---Arcade-game-clone/index.html">GitHub</a></p>
         </section>
       </article> 
 
+      <article class="row text-center">
+        <section class="col-md-4">
+              <img class="size img-responsive" src="img/p4.jpg" data-toggle="modal" data-target="#project4" alt="Website Optimization" srcset="img/p4.jpg 1x, img/p4.jpg 2x">
+              <h3>Website Optimization</h3>
+              <p><a href="http://sejal6289.github.io/Project-4-website-optimization/index.html" target="_blank"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Project-4-website-optimization">GitHub</a></p>
+        </section>
+      </article>
       
 
       <!-- End -->
@@ -148,6 +155,23 @@
           <div class="modal-body">
             <img class="img-responsive modal-image" src="img/p3.jpg" alt="Arcade Game">
             Developed classic arcade Frogger game clone. This is created using HTML5 canvas and Object Oriented Java Script. 
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel3">Website Optimization</h4>
+          </div>
+          <div class="modal-body">
+            <img class="img-responsive modal-image" src="img/p4.jpg" alt="Website Optimization">
+            Optimized a provided website to achieve target Page Speed score and runs at 60 fps. Implemented gulp animation for Image, CSS, JavaScript and HTML minification.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
