--- a/Sejal_Portfolio/Portfolio site_updated.html
+++ b/Sejal_Portfolio/Portfolio site_updated.html
@@ -64,7 +64,7 @@
 
       <article class="row text-center">
         <section class="col-md-4">
-              <img class="size img-responsive" src="img/p4.JPG" data-toggle="modal" data-target="#project4" alt="Website Optimization" srcset="img/p4.JPG 1x, img/p4.JPG 2x">
+              <img class="size img-responsive" src="img/project4.jpg" data-toggle="modal" data-target="#project4" alt="Website Optimization" srcset="img/project4.jpg 1x, img/project4.jpg 2x">
               <h3>Website Optimization</h3>
               <p><a href="http://sejal6289.github.io/Project-4-website-optimization/index.html" target="_blank"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Project-4-website-optimization">GitHub</a></p>
         </section>
@@ -170,7 +170,7 @@
             <h4 class="modal-title" id="myModalLabel3">Website Optimization</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive modal-image" src="img/p4.JPG" alt="Website Optimization">
+            <img class="img-responsive modal-image" src="img/project4.jpg" alt="Website Optimization">
             Optimized a provided website to achieve target Page Speed score and runs at 60 fps. Implemented gulp animation for Image, CSS, JavaScript and HTML minification.
           </div>
           <div class="modal-footer">
