Project links updated

--- a/Sejal_Portfolio/Portfolio site_updated.html
+++ b/Sejal_Portfolio/Portfolio site_updated.html
@@ -58,7 +58,7 @@
         <section class="col-md-4">
               <img class="size img-responsive" src="img/p3.jpg" data-toggle="modal" data-target="#project3" alt="Classic arcade game clone" srcset="img/p3.jpg 1x, img/p3.jpg 2x">
               <h3>Classic Arcade Game Clone</h3>
-              <p><a target = "_blank" href="https://rawgit.com/sejal6289/Project-3---Arcade-game-clone/master/index.html"> Project </a> | <a target = "_blank" href="http://sejal6289.github.io/Project-3---Arcade-game-clone/index.html">GitHub</a></p>
+              <p><a target = "_blank" href="http://sejal6289.github.io/Project-3---Arcade-game-clone/index.html"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Project-3---Arcade-game-clone">GitHub</a></p>
         </section>
       </article> 
 
