Added "Neighborhood map" Project to portfolio

--- a/Sejal_Portfolio/Portfolio site_updated.html
+++ b/Sejal_Portfolio/Portfolio site_updated.html
@@ -79,6 +79,14 @@
               <p><a href="http://sejal6289.github.io/Cat-Clicker/index.html" target="_blank"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Cat-Clicker">GitHub</a></p>
         </section>
       </article>
+
+      <article class="row text-center">
+        <section class="col-md-4">
+              <img class="size img-responsive" src="img/project7.jpg" data-toggle="modal" data-target="#project7" alt="Neighborhood Map" srcset="img/project7.jpg 1x, img/project7.jpg 2x">
+              <h3>Neighborhood Map</h3>
+              <p><a href="http://sejal6289.github.io/Neighborhood-Map/index.html" target="_blank"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Neighborhood-Map">GitHub</a></p>
+        </section>
+      </article>
       
 
       <!-- End -->
@@ -223,5 +231,23 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="project7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel3">Neigborhood Map</h4>
+          </div>
+          <div class="modal-body">
+            <img class="img-responsive modal-image" src="img/project7.jpg" alt="Neighborhood Map">
+            Shows a searchable list of locations of interest in the Portland, OR area. A single-page web application, built using the Knockout framework, that displays a Google Map of an area and various points of interest.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 </body></html>
