added Project 7 image "p7.jpg"

--- a/Sejal_Portfolio/Portfolio site_updated.html
+++ b/Sejal_Portfolio/Portfolio site_updated.html
@@ -82,7 +82,7 @@
 
       <article class="row text-center">
         <section class="col-md-4">
-              <img class="size img-responsive" src="img/project7.jpg" data-toggle="modal" data-target="#project7" alt="Neighborhood Map" srcset="img/project7.jpg 1x, img/project7.jpg 2x">
+              <img class="size img-responsive" src="img/p7.jpg" data-toggle="modal" data-target="#project7" alt="Neighborhood Map" srcset="img/p7.jpg 1x, img/p7.jpg 2x">
               <h3>Neighborhood Map</h3>
               <p><a href="http://sejal6289.github.io/Neighborhood-Map/index.html" target="_blank"> Project </a> | <a target = "_blank" href="https://github.com/sejal6289/Neighborhood-Map">GitHub</a></p>
         </section>
@@ -239,7 +239,7 @@
             <h4 class="modal-title" id="myModalLabel3">Neigborhood Map</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive modal-image" src="img/project7.jpg" alt="Neighborhood Map">
+            <img class="img-responsive modal-image" src="img/p7.jpg" alt="Neighborhood Map">
             Shows a searchable list of locations of interest in the Portland, OR area. A single-page web application, built using the Knockout framework, that displays a Google Map of an area and various points of interest.
           </div>
           <div class="modal-footer">
